--- a/GymScheduler/Views/_ViewImports.cshtml
+++ b/GymScheduler/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using gym_scheduler
-@using gym_scheduler.Models
+﻿@using GymScheduler
+@using GymScheduler.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
